--- a/blog/hugo.toml
+++ b/blog/hugo.toml
@@ -1,6 +1,8 @@
 baseURL = 'https://pracht.report/'
 languageCode = 'de-de'
 title = 'pracht'
+paginate = 10
 
 [params]
   dateFormat = "02.01.2006"
+  description = "die Meinung, ein Blog über alles."
