--- a/blogv2/hugo.toml
+++ b/blogv2/hugo.toml
@@ -8,17 +8,32 @@ paginate = 10
   disableJS = false
   disableHTML = false
   disableXML = false
+  minifyOutput = true
+
+[imaging]
+  quality = 85
+  resampleFilter = "Lanczos"
 
 [params]
   dateFormat = "02.01.2006"
   description = "die meinung, ein Blog über alles."
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
 [assetDirs]
   cssDir = "static/styles"
   jsDir = "static/js"
 
+[outputs]
+  home = ["HTML", "RSS"]
+  section = ["HTML"]
+
 [caches]
   [caches.images]
+    dir = ":resourceDir/_gen"
     maxAge = "24h"
 
 [taxonomies]
