--- a/blogv2/hugo.toml
+++ b/blogv2/hugo.toml
@@ -3,6 +3,7 @@ baseURL = "https://pracht.report/"
 languageCode = "de-de"
 defaultContentLanguage = 'de'
 paginate = 15
+anonymize = true
 
 [minify]
   disableCSS = false
